; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_asn.c_ber_out_header.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_asn.c_ber_out_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ber_out_header(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp sgt i32 %7, 255
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @out_uint16_be(i32 %10, i32 %11)
  br label %17

13:                                               ; preds = %3
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @out_uint8(i32 %14, i32 %15)
  br label %17

17:                                               ; preds = %13, %9
  %18 = load i32, i32* %6, align 4
  %19 = icmp sge i32 %18, 128
  br i1 %19, label %20, label %26

20:                                               ; preds = %17
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @out_uint8(i32 %21, i32 130)
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @out_uint16_be(i32 %23, i32 %24)
  br label %30

26:                                               ; preds = %17
  %27 = load i32, i32* %4, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @out_uint8(i32 %27, i32 %28)
  br label %30

30:                                               ; preds = %26, %20
  ret void
}

declare dso_local i32 @out_uint16_be(i32, i32) #1

declare dso_local i32 @out_uint8(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
